# ai-engineering-bootcamp-prerequisites

./: .cursorrules  .gitignore  CLAUDE.MD  CLAUDE.md  COMMIT_MESSAGE.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.serena/: .gitignore  project.yml
apps/api/: README.md  pyproject.toml
apps/api/evals/: README.md  __init__.py  eval_retriever.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: README.md  retrieval_generation.py
apps/api/src/api/agents/prompts/: README.md  retrieval_generation.yaml
apps/api/src/api/agents/utils/: README.md  prompt_management.py
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: README.md  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
notebooks/week0/: 01-llm-apis.ipynb  README.md
notebooks/week1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-Amazon.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-Evals.ipynb  README.md
notebooks/week2/: 01-Strucutured-Ouputs-Intro.ipynb  02-Structures-Outputs-RAG-Pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb  README.md
notebooks/week2/prompts/: README.md
scripts/: __init__.py  health_check.py  smoke_test.py
src/: app.py
